get firebase config

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
   </head>
 
   <body ng-app="moneystuff">
-    <div ng-view></div> <!-- route content -->
+    <div ng-view>ALISEHGOLIAHSEGOLIHAOSIEGH</div> <!-- route content -->
   </body>
 </html>
