test button directive

--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,6 @@
 
   <body ng-app="moneystuff">
     <div ng-view>ALISEHGOLIAHSEGOLIHAOSIEGH</div> <!-- route content -->
+    <isolate-scope-with-controller></isolate-scope-with-controller>
   </body>
 </html>
