--- a/public/javascripts/navigation/navTemplate.html
+++ b/public/javascripts/navigation/navTemplate.html
@@ -1,5 +1,9 @@
 <div class="nav">
   <div class="nav-link nav-link-{{$index}}" ng-click="navigate(pair[1])" ng-repeat="pair in links">
     <div>{{pair[0]}}</div>
+    <!-- {{asdf.test}} -->
+  </div>
+  <div ng-repeat="(id, test) in tests">
+    {{test.test}}
   </div>
 </div>
