--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
 
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+
     <script>
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
@@ -27,8 +29,8 @@
 
     <script src="javascripts/app.js" type="text/javascript"></script>
     <script src="javascripts/dataService.js" type="text/javascript"></script>
-    <script src="javascripts/landing/landingDirective.js" type="text/javascript"></script>
-    <script src="javascripts/landing/landingTemplate.html" type="text/html"></script>
+    <!--<script src="javascripts/landing/landingDirective.js" type="text/javascript"></script>
+    <script src="javascripts/landing/landingTemplate.html" type="text/html"></script>-->
     <script src="javascripts/navigation/navDirective.js" type="text/javascript"></script>
     <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
 
