--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
     <script src="javascripts/app.js" type="text/javascript"></script>
     <script src="javascripts/dataService.js" type="text/javascript"></script>
-    <script src="javascripts/landing/landingDirective.js" type="text/javascript"></script>
-    <script src="javascripts/landing/landingTemplate.html" type="text/html"></script>
+    <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
+    <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
     <script src="javascripts/navigation/navDirective.js" type="text/javascript"></script>
     <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
 
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet/less" type="text/css" href="stylesheets/main.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/nav.less" />
+    <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
