fix some merge conflict stuff, more transaction table stuff

--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,5 +1,5 @@
 <table>
-<tr ng-repeat="transaction in transactionList">
-{{transaction}}
-</tr>
+  <tr ng-repeat="transaction in transactionArray">
+  <td>{{transaction.amount}}</td>
+  </tr>
 </table>
