--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,5 +1,16 @@
-<table>
+<table class="transaction-table ui single line celled table">
+  <thead><tr>
+    <th>Date</th>
+    <th>User</th>
+    <th>Description</th>
+    <th>Amount</th>
+    <th>Category</th>
+  </tr></thead>
   <tr ng-repeat="transaction in transactionArray">
-  <td>{{transaction.amount}}</td>
+    <td>{{transaction.date}}</td>
+    <td>{{transaction.users}}</td>
+    <td>{{transaction.description}}</td>
+    <td>{{transaction.amount}}</td>
+    <td>{{transaction.categories}}</td>
   </tr>
 </table>
