--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,3 +1,5 @@
+<button class="ui button" ng-click="addTransaction()">Add</button>
+{{amountTotal()}}
 <table class="transaction-table ui single line celled table">
   <thead><tr>
     <th>Date</th>
@@ -6,6 +8,19 @@
     <th>Amount</th>
     <th>Category</th>
   </tr></thead>
+  <tr>
+    <th><div class="ui input">
+      <input type="text" ng-model="newTransaction.date">
+    </div></th>
+    <th>User</th>
+    <th><div class="ui input">
+      <input type="text" ng-model="newTransaction.description">
+    </div></th>
+    <th><div class="ui input">
+      <input type="number" ng-model="newTransaction.amount">
+    </div></th>
+    <th>Category</th>
+  </tr>
   <tr ng-repeat="transaction in transactionArray">
     <td>{{transaction.date}}</td>
     <td>{{transaction.users}}</td>
