sign in and some work on budget structure

--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,4 +1,5 @@
 <button class="ui button" ng-click="addTransaction()">Add</button>
+<button class="ui button" ng-click="signIn()">Sign In</button>
 {{amountTotal()}}
 <table class="transaction-table ui single line celled table">
   <thead><tr>
