--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <script src="javascripts/external/lodash.min.js" type="text/javascript"></script>
 
     <script src="javascripts/app.js" type="text/javascript"></script>
+    <script src="javascripts/util.js" type="text/javascript"></script>
     <script src="javascripts/dataService.js" type="text/javascript"></script>
     <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
     <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
