--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
       var config = {
-        apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
-        authDomain: "budgeting-41eaa.firebaseapp.com",
-        databaseURL: "https://budgeting-41eaa.firebaseio.com",
-        storageBucket: "budgeting-41eaa.appspot.com",
+      apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
+      authDomain: "budgeting-41eaa.firebaseapp.com",
+      databaseURL: "https://budgeting-41eaa.firebaseio.com",
+      storageBucket: "budgeting-41eaa.appspot.com",
       };
       firebase.initializeApp(config);
     </script>
@@ -31,24 +31,39 @@
 
     <script src="javascripts/app.js" type="text/javascript"></script>
     <script src="javascripts/util.js" type="text/javascript"></script>
+
+    <!-- Services -->
     <script src="javascripts/dataService.js" type="text/javascript"></script>
+    <script src="javascripts/authService.js" type="text/javascript"></script>
+
+    <!-- Modules -->
     <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
     <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
     <script src="javascripts/navigation/navDirective.js" type="text/javascript"></script>
     <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
+    <script src="javascripts/piggyBar/piggyDirective.js" type="text/javascript"></script>
+    <script src="javascripts/piggyBar/piggyTemplate.html" type="text/html" ></script>
 
+    <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
 
+    <!-- Stylesheets -->
     <link rel="stylesheet/less" type="text/css" href="stylesheets/main.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/nav.less" />
+    <link rel="stylesheet/less" type="text/css" href="stylesheets/piggy.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
+
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
   <body ng-app="moneystuff">
-    <navigation></navigation>
-    <div class="top-bar"></div>
-    <div class="view" ng-view></div> <!-- route content -->
-
+  <div class="top-bar"></div>
+  <div class="container">
+    <navigation class="nav-wrapper flex-wrapper"></navigation>
+    <div class="view-wrapper flex-wrapper">
+      <div ng-view></div> <!-- route content -->
+    </div>
+    <piggy class="piggy-wrapper flex-wrapper"></piggy>
+  </div>
   </body>
 </html>
