--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,6 +1,6 @@
-<button class="ui button" ng-click="addTransaction()">Add</button>
-<button class="ui button" ng-click="signIn()">Sign In</button>
-{{amountTotal()}}
+<div id="button-row">
+  <button id="add-button" class="ui button" ng-click="addTransaction()">Add Transaction</button>
+</div>
 <table class="transaction-table ui single line celled table">
   <thead><tr>
     <th>Date</th>
@@ -10,19 +10,25 @@
     <th>Category</th>
   </tr></thead>
   <tr>
-    <th><div class="ui input">
-      <input type="text" ng-model="newTransaction.date">
-    </div></th>
-    <th>User</th>
-    <th><div class="ui input">
-      <input type="text" ng-model="newTransaction.description">
-    </div></th>
-    <th><div class="ui input">
-      <input type="number" ng-model="newTransaction.amount">
-    </div></th>
-    <th><div class="ui input">
-      <input type="text" ng-model="newTransaction.category">
-    </div></th>
+    <td class="input-row">
+      <div class="ui input">
+        <input class="year-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.year">
+        <input class="month-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.month">
+        <input class="day-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.day">
+      </div>
+    </td>
+    <td>User</td>
+    <td>
+      <div class="ui input">
+        <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.description">
+      </div>
+    </td>
+    <td>
+      <div class="ui input">
+        <input type="number" ng-keypress="inputKeypress($event)" ng-model="newTransaction.amount">
+      </div>
+    </td>
+    <td>Category</td>
   </tr>
   <tr ng-repeat="transaction in transactionArray | orderBy:'-date'">
     <td>{{transaction.date}}</td>
