change users and categories, show paid and owing, fix inputs

--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -17,5 +17,12 @@ pig lol
     </div>
   </div>
 ----------------------------
-  {{currentBudget}}
+  <div>
+    {{paidText}}
+    {{paid}}
+  </div>
+----------------------------
+  <div>
+    {{currentBudget}}
+  </div>
 </div>
