fix flexbox styling, add navigation

--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -1,5 +1,6 @@
 <div class="piggy">
-pig lol
+
+  <div id="pig-wrapper"><img src="pig.png"></div>
   <div>
     <!-- <div ng-repeat="(user, title) in [['all', 'Combined'], ['tian', 'Tian'], ['joe', 'Joe']]">
     </div> -->
