--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moneystuff</title>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -43,6 +44,8 @@
     <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
     <script src="javascripts/piggyBar/piggyDirective.js" type="text/javascript"></script>
     <script src="javascripts/piggyBar/piggyTemplate.html" type="text/html" ></script>
+    <script src="javascripts/settings/settingsDirective.js" type="text/javascript"></script>
+    <script src="javascripts/settings/settingsTemplate.html" type="text/html" ></script>
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
@@ -52,18 +55,18 @@
     <link rel="stylesheet/less" type="text/css" href="stylesheets/nav.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/piggy.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
-
+    <link rel="stylesheet/less" type="text/css" href="stylesheets/settings.less" />
+    
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
   <body ng-app="moneystuff">
-  <div class="top-bar"></div>
   <div class="container">
-    <navigation class="nav-wrapper flex-wrapper"></navigation>
+    <navigation class="nav-wrapper"></navigation>
     <div class="view-wrapper flex-wrapper">
       <div ng-view></div> <!-- route content -->
     </div>
-    <piggy class="piggy-wrapper flex-wrapper"></piggy>
+    <piggy class="piggy-wrapper"></piggy>
   </div>
   </body>
 </html>
