fix shared checkbox

--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -20,7 +20,8 @@
     <!-- Shared input -->
     <td class="text-center">
       <div class="ui checkbox">
-        <input type="checkbox" ng-model="newTransaction.shared">
+        <input type="checkbox" name="shared" ng-model="newTransaction.shared">
+        <label></label>
       </div>
     </td>
     <!-- Paid by input -->
