--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,19 @@
     <title>moneystuff</title>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <!-- External Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
 
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
 
     <script>
       // Initialize Firebase
@@ -30,6 +32,7 @@
 
     <script src="javascripts/external/lodash.min.js" type="text/javascript"></script>
 
+    <!-- Javascript -->
     <script src="javascripts/app.js" type="text/javascript"></script>
     <script src="javascripts/util.js" type="text/javascript"></script>
 
@@ -49,6 +52,8 @@
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather+Sans">
+    <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Yeseva+One">
 
     <!-- Stylesheets -->
     <link rel="stylesheet/less" type="text/css" href="stylesheets/main.less" />
@@ -56,7 +61,7 @@
     <link rel="stylesheet/less" type="text/css" href="stylesheets/piggy.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/settings.less" />
-    
+
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
