--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,3 +1,51 @@
+<div id="delete-transaction-modal" class="ui basic modal">
+  <div class="header">
+    Delete Transaction
+  </div>
+  <div class="image content">
+    <div class="description">
+      <p>Are you sure you want to delete this transaction?</p>
+      <table class="transaction-table ui single line celled table">
+        <thead><tr>
+          <th>Date</th>
+          <th>Shared</th>
+          <th>Paid by</th>
+          <th>Description</th>
+          <th>Amount</th>
+          <th>Category</th>
+          <th></th>
+        </tr></thead>
+        <tr>
+          <td>{{renderDate(transactionToDelete.date)}}</td>
+
+          <td class="text-center">
+            <div class="shared" ng-show="!transactionToDelete.shared"><i class="fa fa-times" aria-hidden="true"></i></div>
+          </td>
+
+          <td class="text-center">
+            <div class="tag tian-tag" ng-show="transactionToDelete.user=='tian'">Tian</div>
+            <div class="tag joe-tag" ng-show="transactionToDelete.user=='joe'">Joe</div>
+          </td>
+
+          <td>{{transactionToDelete.description}}</td>
+          <td>${{transactionToDelete.amount}}</td>
+
+          <td><span class="tag category-tag" ng-repeat="category in transactionToDelete.categories | orderBy: 'category'">{{category}}</span></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="actions">
+    <div class="ui cancel red basic inverted button" ng-click="resetDelete()">
+      <i class="fa fa-times" aria-hidden="true"></i>
+      No
+    </div>
+    <div class="ui ok green basic inverted button" ng-click="deleteTransaction()">
+      <i class="fa fa-check" aria-hidden="true"></i>
+      Yes
+    </div>
+  </div>
+</div>
 
 <table class="transaction-table ui single line celled table">
   <thead><tr>
@@ -57,7 +105,7 @@
     <td>
       <div class="ui input">
         <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.categories">
-        
+
       </div>
     </td>
     <td><button ng-click="addTransaction()" class="add-button positive ui button">+</button></td>
@@ -79,11 +127,11 @@
 
     <td>{{transaction.description}}</td>
     <td>${{transaction.amount}}</td>
-    
+
     <!-- Category -->
     <td><span class="tag category-tag" ng-repeat="category in transaction.categories | orderBy: 'category'">{{category}}</span></td>
     <td>
-      <button class="ui basic button delete-button" ng-click="deleteTransaction(transaction.$id)">
+      <button class="ui basic button delete-button" ng-click="deleteConfirmation(transaction.$id)">
         <i class="fa fa-times" aria-hidden="true"></i>
       </button>
     </td>
