--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -4,17 +4,26 @@
   <div>
     <!-- <div ng-repeat="(user, title) in [['all', 'Combined'], ['tian', 'Tian'], ['joe', 'Joe']]">
     </div> -->
-    Combined:
+    <h2>Combined:</h2>
     <div ng-repeat="(category, amounts) in currentBudget.all.categories">
-      * {{category}}: {{amounts[2]}} of {{amounts[0]}}
+      <div class="ui progress combined-progress" id="combined-{{category}}-progress">
+        <div class="bar"><div class="progress"></div></div>
+        <div class="label">{{category}}: ${{amounts[2]}} of ${{amounts[0]}}</div>
+      </div>
     </div>
-    Tian:
+    <h2>Tian:</h2>
     <div ng-repeat="(category, amounts) in currentBudget.tian.categories">
-      * {{category}}: {{amounts[2]}} of {{amounts[0]}}
+      <div class="ui progress tian-progress" id="tian-{{category}}-progress">
+        <div class="bar"><div class="progress"></div></div>
+        <div class="label">{{category}}: ${{amounts[2]}} of ${{amounts[0]}}</div>
+      </div>
     </div>
-    All:
+    <h2>Joe:</h2>
     <div ng-repeat="(category, amounts) in currentBudget.joe.categories">
-      * {{category}}: {{amounts[2]}} of {{amounts[0]}}
+      <div class="ui progress joe-progress" id="joe-{{category}}-progress">
+        <div class="bar"><div class="progress"></div></div>
+        <div class="label">{{category}}: ${{amounts[2]}} of ${{amounts[0]}}</div>
+      </div>
     </div>
   </div>
 ----------------------------
