--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -1,139 +1,155 @@
-<div id="delete-transaction-modal" class="ui basic modal">
-  <div class="header">
-    Delete Transaction
-  </div>
-  <div class="image content">
-    <div class="description">
-      <p>Are you sure you want to delete this transaction?</p>
-      <table class="transaction-table ui single line celled table">
-        <thead><tr>
-          <th>Date</th>
-          <th>Shared</th>
-          <th>Paid by</th>
-          <th>Description</th>
-          <th>Amount</th>
-          <th>Category</th>
-          <th></th>
-        </tr></thead>
-        <tr>
-          <td>{{renderDate(transactionToDelete.date)}}</td>
+<div class="transaction-table-wrapper">
+  <div id="delete-transaction-modal" class="ui basic modal">
+    <div class="header">
+      Delete Transaction
+    </div>
+    <div class="image content">
+      <div class="description">
+        <p>Are you sure you want to delete this transaction?</p>
+        <table class="transaction-table ui single line celled table">
+          <thead><tr>
+            <th>Date</th>
+            <th>Shared</th>
+            <th>Paid by</th>
+            <th>Description</th>
+            <th>Amount</th>
+            <th>Category</th>
+            <th></th>
+          </tr></thead>
+          <tr>
+            <td>{{renderDate(transactionToDelete.date)}}</td>
 
-          <td class="text-center">
-            <div class="shared" ng-show="!transactionToDelete.shared"><i class="fa fa-times" aria-hidden="true"></i></div>
-          </td>
+            <td class="text-center">
+              <div class="shared" ng-show="!transactionToDelete.shared"><i class="fa fa-times" aria-hidden="true"></i></div>
+            </td>
 
-          <td class="text-center">
-            <div class="tag tian-tag" ng-show="transactionToDelete.user=='tian'">Tian</div>
-            <div class="tag joe-tag" ng-show="transactionToDelete.user=='joe'">Joe</div>
-          </td>
+            <td class="text-center">
+              <div class="tag tian-tag" ng-show="transactionToDelete.user=='tian'">Tian</div>
+              <div class="tag joe-tag" ng-show="transactionToDelete.user=='joe'">Joe</div>
+            </td>
 
-          <td>{{transactionToDelete.description}}</td>
-          <td>${{transactionToDelete.amount}}</td>
+            <td>{{transactionToDelete.description}}</td>
+            <td>${{transactionToDelete.amount}}</td>
 
-          <td><span class="tag category-tag" ng-repeat="category in transactionToDelete.categories | orderBy: 'category'">{{category}}</span></td>
-        </tr>
-      </table>
+            <td><span class="tag category-tag" ng-repeat="category in transactionToDelete.categories | orderBy: 'category'">{{category}}</span></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="actions">
+      <div class="ui cancel red basic inverted button" ng-click="resetDelete()">
+        <i class="fa fa-times" aria-hidden="true"></i>
+        No
+      </div>
+      <div class="ui ok green basic inverted button" ng-click="deleteTransaction()">
+        <i class="fa fa-check" aria-hidden="true"></i>
+        Yes
+      </div>
     </div>
   </div>
-  <div class="actions">
-    <div class="ui cancel red basic inverted button" ng-click="resetDelete()">
-      <i class="fa fa-times" aria-hidden="true"></i>
-      No
-    </div>
-    <div class="ui ok green basic inverted button" ng-click="deleteTransaction()">
-      <i class="fa fa-check" aria-hidden="true"></i>
-      Yes
-    </div>
-  </div>
+
+<!-- FILTERING///////////////////////////////////////////////////////////////-->
+<div class="filter-row">
+  <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter">
+    <option value="">All</option>
+    <option value="tian">Tian</option>
+    <option value="joe">Joe</option>
+  </select>
+
+  <button ng-click="filterTransactions()" class="ui basic button">Filter</button>
 </div>
 
-<table class="transaction-table ui single line celled table">
-  <thead><tr>
-    <th>Date</th>
-    <th>Shared</th>
-    <th>Paid by</th>
-    <th>Description</th>
-    <th>Amount</th>
-    <th>Category</th>
-    <th></th>
-  </tr></thead>
-  <tr class="input-row">
-    <td>
-      <div class="ui input">
-        <input class="year-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.year">
-        <input class="month-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.month">
-        <input class="day-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.day">
-      </div>
-    </td>
-    <!-- Shared input -->
-    <td class="text-center">
-      <div class="ui checkbox">
-        <input type="checkbox" name="shared" ng-model="newTransaction.shared">
-        <label></label>
-      </div>
-    </td>
-    <!-- Paid by input -->
-    <td>
-      <div class="ui form">
-        <div class="grouped fields">
-          <div class="field">
-            <div class="ui radio checkbox">
-              <input type="radio" ng-model="newTransaction.user" name="user" value="joe">
-              <label>Joe</label>
+<!-- TRANSACTIONS////////////////////////////////////////////////////////////--> 
+
+
+  <table class="transaction-table ui single line celled table">
+    <thead><tr>
+      <th>Date</th>
+      <th>Shared</th>
+      <th>Paid by</th>
+      <th>Description</th>
+      <th>Amount</th>
+      <th>Category</th>
+      <th></th>
+    </tr></thead>
+    <tr class="input-row">
+      <td>
+        <div class="ui input">
+          <input class="year-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.year">
+          <input class="month-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.month">
+          <input class="day-input" type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.day">
+        </div>
+      </td>
+      <!-- Shared input -->
+      <td class="text-center">
+        <div class="ui checkbox">
+          <input type="checkbox" name="shared" ng-model="newTransaction.shared">
+          <label></label>
+        </div>
+      </td>
+      <!-- Paid by input -->
+      <td>
+        <div class="ui form">
+          <div class="grouped fields">
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" ng-model="newTransaction.user" name="user" value="joe">
+                <label>Joe</label>
+              </div>
             </div>
-          </div>
-          <div class="field">
-            <div class="ui radio checkbox">
-              <input type="radio" ng-model="newTransaction.user" name="user" value="tian">
-              <label>Tian</label>
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" ng-model="newTransaction.user" name="user" value="tian">
+                <label>Tian</label>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </td>
+      </td>
 
-    <td>
-      <div class="ui input">
-        <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.description">
-      </div>
-    </td>
-    <td>
-      <div class="ui input">
-        <input class="amount-input" type="number" ng-keypress="inputKeypress($event)" ng-model="newTransaction.amount">
-      </div>
-    </td>
-    <td>
-      <div class="ui input">
-        <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.categories">
+      <td>
+        <div class="ui input">
+          <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.description">
+        </div>
+      </td>
+      <td>
+        <div class="ui input">
+          <input class="amount-input" type="number" ng-keypress="inputKeypress($event)" ng-model="newTransaction.amount">
+        </div>
+      </td>
+      <td>
+        <div class="ui input">
+          <input type="text" ng-keypress="inputKeypress($event)" ng-model="newTransaction.categories">
 
-      </div>
-    </td>
-    <td><button ng-click="addTransaction()" class="add-button positive ui button">+</button></td>
-  </tr> <!-- input row -->
+        </div>
+      </td>
+      <td><button ng-click="addTransaction()" class="add-button positive ui button">+</button></td>
+    </tr> <!-- input row -->
 
-  <tr ng-repeat="transaction in transactionArray | orderBy:'-date'">
-    <td>{{renderDate(transaction.date)}}</td>
+    <tr ng-repeat="transaction in transactionArray | orderBy:'-date'">
+      <td>{{renderDate(transaction.date)}}</td>
 
-    <!-- Shared -->
-    <td class="text-center">
-      <div class="shared" ng-show="{{!transaction.shared}}"><i class="fa fa-times" aria-hidden="true"></i></div>
-    </td>
+      <!-- Shared -->
+      <td class="text-center">
+        <div class="shared" ng-show="{{!transaction.shared}}"><i class="fa fa-times" aria-hidden="true"></i></div>
+      </td>
 
-    <!-- Paid by -->
-    <td class="text-center">
-      <div class="tag tian-tag" ng-show="{{transaction.user=='tian'}}">Tian</div>
-      <div class="tag joe-tag" ng-show="{{transaction.user=='joe'}}">Joe</div>
-    </td>
+      <!-- Paid by -->
+      <td class="text-center">
+        <div class="tag tian-tag" ng-show="{{transaction.user=='tian'}}">Tian</div>
+        <div class="tag joe-tag" ng-show="{{transaction.user=='joe'}}">Joe</div>
+      </td>
 
-    <td>{{transaction.description}}</td>
-    <td>${{transaction.amount}}</td>
+      <td>{{transaction.description}}</td>
+      <td>${{transaction.amount}}</td>
 
-    <!-- Category -->
-    <td><span class="tag category-tag" ng-repeat="category in transaction.categories | orderBy: 'category'">{{category}}</span></td>
-    <td>
-      <button class="ui basic button delete-button" ng-click="deleteConfirmation(transaction.$id)">
-        <i class="fa fa-times" aria-hidden="true"></i>
-      </button>
-    </td>
-  </tr>
-</table>
+      <!-- Category -->
+      <td><span class="tag category-tag" ng-repeat="category in transaction.categories | orderBy: 'category'">{{category}}</span></td>
+      <td>
+        <button class="ui basic button delete-button" ng-click="deleteConfirmation(transaction.$id)">
+          <i class="fa fa-times" aria-hidden="true"></i>
+        </button>
+      </td>
+    </tr>
+  </table>
+</div>
