add summary stuff

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
     <script src="javascripts/piggyBar/piggyTemplate.html" type="text/html" ></script>
     <script src="javascripts/settings/settingsDirective.js" type="text/javascript"></script>
     <script src="javascripts/settings/settingsTemplate.html" type="text/html" ></script>
+    <script src="javascripts/summary/summaryDirective.js" type="text/javascript"></script>
+    <script src="javascripts/summary/summaryTemplate.html" type="text/html" ></script>
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
@@ -62,7 +64,7 @@
     <link rel="stylesheet/less" type="text/css" href="stylesheets/piggy.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/settings.less" />
-
+    <link rel="stylesheet/less" type="text/css" href="stylesheets/summary.less" />
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
