--- a/public/javascripts/settings/settingsTemplate.html
+++ b/public/javascripts/settings/settingsTemplate.html
@@ -1,3 +1,37 @@
 <div class="settings-container">
-settings
+  <h2>Combined:</h2>
+  <div ng-repeat="(category, amounts) in currentBudget.all">
+    <div class="ui labeled input">
+      <div class="ui label">{{category}}:</div>
+      <input class="amount-input" type="number" ng-model="amounts[0]" ng-change="updateBudget()">
+    </div>
+    <div class="ui checkbox">
+      <input type="checkbox" name="rollback" ng-model="amounts[3]" ng-change="updateBudget()">
+      <label></label>
+    </div>
+  </div>
+
+  <h2>Tian:</h2>
+  <div ng-repeat="(category, amounts) in currentBudget.tian">
+    <div class="ui labeled input">
+      <div class="ui label">{{category}}:</div>
+      <input class="amount-input" type="number" ng-model="amounts[0]" ng-change="updateBudget()">
+    </div>
+    <div class="ui checkbox">
+      <input type="checkbox" name="rollback" ng-model="amounts[3]" ng-change="updateBudget()">
+      <label></label>
+    </div>
+  </div>
+
+  <h2>Joe:</h2>
+  <div ng-repeat="(category, amounts) in currentBudget.joe">
+    <div class="ui labeled input">
+      <div class="ui label">{{category}}:</div>
+      <input class="amount-input" type="number" ng-model="amounts[0]" ng-change="updateBudget()">
+    </div>
+    <div class="ui checkbox">
+      <input type="checkbox" name="rollback" ng-model="amounts[3]" ng-change="updateBudget()">
+      <label></label>
+    </div>
+  </div>
 </div>
