--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -60,6 +60,14 @@
     <option ng-repeat="category in allCategories" value="{{category}}">{{category}}
     </option>
   </select>
+  <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter">
+    <option ng-repeat="month in allMonths" value="{{month}}">{{month}}
+    </option>
+  </select>
+  <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter">
+    <option ng-repeat="year in allYears" value="{{year}}">{{year}}
+    </option>
+  </select>
 </div>
 
 <!-- TRANSACTIONS////////////////////////////////////////////////////////////-->
