--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -56,15 +56,18 @@
     <option value="joe">Joe</option>
   </select>
 
-  <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" id="categoryFilter">
+  <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" 
+      id="categoryFilter" placeholder="Category">
     <option ng-repeat="category in allCategories" value="{{category}}">{{category}}
     </option>
   </select>
-  <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter">
+  <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter"
+      placeholder="Month">
     <option ng-repeat="month in allMonths" value="{{month}}">{{month}}
     </option>
   </select>
-  <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter">
+  <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter"
+      placeholder="Year">
     <option ng-repeat="year in allYears" value="{{year}}">{{year}}
     </option>
   </select>
@@ -172,8 +175,10 @@
 
       <!-- Paid by -->
       <td class="text-center">
-        <div class="tag tian-tag" ng-show="{{transaction.user=='tian'}}">Tian</div>
-        <div class="tag joe-tag" ng-show="{{transaction.user=='joe'}}">Joe</div>
+        <div class="tag tian-tag" ng-show="{{transaction.user=='tian'}}"
+            ng-click="setUserFilter('tian')">Tian</div>
+        <div class="tag joe-tag" ng-show="{{transaction.user=='joe'}}"
+            ng-click="setUserFilter('joe')">Joe</div>
       </td>
 
       <td>{{transaction.description}}</td>
