--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -28,8 +28,10 @@
   </div>
 ----------------------------
   <div>
-    {{paidText}}
-    {{paid}}
+    This Month: {{paidText}}
+  </div>
+  <div>
+    Overall: {{paidTextTotal}}
   </div>
 ----------------------------
   <div>
