filterService and change budgets when filter is set

--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -2,6 +2,7 @@
 
   <div id="pig-wrapper"><img src="pig.png"></div>
   <div>
+    <h1>{{currentBudgetMonth}}</h1>
     <!-- <div ng-repeat="(user, title) in [['all', 'Combined'], ['tian', 'Tian'], ['joe', 'Joe']]">
     </div> -->
     <h2>Combined:</h2>
