--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script src="javascripts/util.js" type="text/javascript"></script>
 
     <!-- Services -->
+    <script src="javascripts/filterService.js" type="text/javascript"></script>
     <script src="javascripts/dataService.js" type="text/javascript"></script>
     <script src="javascripts/authService.js" type="text/javascript"></script>
 
