--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -50,23 +50,23 @@
 
 <!-- FILTERING///////////////////////////////////////////////////////////////-->
 <div class="filter-row">
-  <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter">
+  <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter" ng-change="updateFilter()" >
     <option value="">All</option>
     <option value="tian">Tian</option>
     <option value="joe">Joe</option>
   </select>
 
-  <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" 
+  <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" ng-change="updateFilter()"
       id="categoryFilter" placeholder="Category">
     <option ng-repeat="category in allCategories" value="{{category}}">{{category}}
     </option>
   </select>
-  <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter"
+  <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter" ng-change="updateFilter()"
       placeholder="Month">
     <option ng-repeat="month in allMonths" value="{{month}}">{{month}}
     </option>
   </select>
-  <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter"
+  <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter" ng-change="updateFilter()"
       placeholder="Year">
     <option ng-repeat="year in allYears" value="{{year}}">{{year}}
     </option>
