keep date input field when you save a transaction. also adding some stuff for pie charts

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
 
+    <script src="javascripts/external/Chart.min.js"></script>
+    <script src="javascripts/external/angular-chart.min.js"></script>
+
     <script>
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
@@ -40,7 +43,6 @@
     <!-- Services -->
     <script src="javascripts/filterService.js" type="text/javascript"></script>
     <script src="javascripts/dataService.js" type="text/javascript"></script>
-    <script src="javascripts/authService.js" type="text/javascript"></script>
 
     <!-- Modules -->
     <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
