display all the category totals except balance

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,16 @@
     <script>
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
+      console.log("alkjsdf");
       var config = {
       apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
       authDomain: "budgeting-41eaa.firebaseapp.com",
       databaseURL: "https://budgeting-41eaa.firebaseio.com",
       storageBucket: "budgeting-41eaa.appspot.com",
       };
+      console.log("alkjsdf 2");
       firebase.initializeApp(config);
+      console.log("alkjsdf 3");
     </script>
 
     <!-- Javascript -->
