work in progress

--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -7,16 +7,9 @@
       <div class="description">
         <p>Are you sure you want to delete this transaction?</p>
         <table class="transaction-table ui single line celled table">
-          <thead><tr>
-            <th>Date</th>
-            <th>Shared</th>
-            <th>Paid by</th>
-            <th>Description</th>
-            <th>Amount</th>
-            <th>Category</th>
-            <th></th>
-          </tr></thead>
-          <tr>
+          <thead transaction-headers></thead>
+          <tr transaction-row data="transactionToDelete">
+          <!--tr>
             <td>{{renderDate(transactionToDelete.date)}}</td>
 
             <td class="text-center">
@@ -32,7 +25,7 @@
             <td>${{transactionToDelete.amount}}</td>
 
             <td><span class="tag category-tag" ng-repeat="category in transactionToDelete.categories | orderBy: 'category'">{{category}}</span></td>
-          </tr>
+          </tr-->
         </table>
       </div>
     </div>
@@ -52,13 +45,14 @@
 <div class="filter-row">
   <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter" ng-change="updateFilter()" >
     <option value="">All</option>
-    <option value="tian">Tian</option>
-    <option value="joe">Joe</option>
+    <option ng-repeat="user in allUsers" value="{{user.$value}}">{{user.$value}}
+    </option>
   </select>
 
   <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" ng-change="updateFilter()"
       id="categoryFilter" placeholder="Category">
-    <option ng-repeat="category in allCategories" value="{{category}}">{{category}}
+    <option value="">All</option>
+    <option ng-repeat="category in allCategories" value="{{category.$value}}">{{category.$value}}
     </option>
   </select>
   <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter" ng-change="updateFilter()"
@@ -77,15 +71,7 @@
 
 
   <table class="transaction-table ui single line celled table">
-    <thead><tr>
-      <th>Date</th>
-      <th>Shared</th>
-      <th>Paid by</th>
-      <th>Description</th>
-      <th>Amount</th>
-      <th>Category</th>
-      <th></th>
-    </tr></thead>
+    <thead transaction-headers></thead>
     <tr class="input-row">
       <td>
         <div class="ui input">
@@ -95,11 +81,11 @@
         </div>
       </td>
       <!-- Shared input -->
-      <td class="text-center">
-        <!-- <div class="ui checkbox">
+      <!-- <td class="text-center">
+        <div class="ui checkbox">
           <input type="checkbox" name="shared" ng-model="newTransaction.shared">
           <label></label>
-        </div> -->
+        </div>
         <div class="ui form">
           <div class="grouped fields">
             <div class="field">
@@ -122,23 +108,23 @@
             </div>
           </div>
         </div>
-      </td>
+      </td>  -->
       <!-- Paid by input -->
       <td>
         <div class="ui form">
           <div class="grouped fields">
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" ng-model="newTransaction.user" name="user" value="joe">
-                <label>Joe</label>
+            <div class="field" ng-repeat="user in allUsers" ng-init="u = user.$value">
+              <div class="ui checkbox">
+                <input type="checkbox" ng-model="newTransaction.users[u]" name="{{u}}" value="{{u}}">
+                <label>{{u}}</label>
               </div>
             </div>
-            <div class="field">
+            <!--div class="field">
               <div class="ui radio checkbox">
                 <input type="radio" ng-model="newTransaction.user" name="user" value="tian">
                 <label>Tian</label>
               </div>
-            </div>
+            </div-->
           </div>
         </div>
       </td>
@@ -162,35 +148,17 @@
       <td><button ng-click="addTransaction()" class="add-button positive ui button">+</button></td>
     </tr> <!-- input row -->
 
-    <tr ng-repeat="transaction in transactionArray | orderBy:'-date'" ng-if="shouldShowTransaction(transaction)">
-      <td>{{renderDate(transaction.date)}}</td>
+    <tr transaction-row ng-repeat="transaction in transactionArray | orderBy:'-date'" ng-if="shouldShowTransaction(transaction)" data="transaction">
 
-      <!-- Shared -->
-      <td class="text-center">
-        <div class="tag self-tag" ng-show="{{transaction.isfor=='self'}}">Self</div>
-        <div class="tag shared-tag" ng-show="{{transaction.isfor=='shared'}}">Shared</div>
-        <div class="tag other-tag" ng-show="{{transaction.isfor=='other'}}">Other</div>
-        <!-- <div class="shared" ng-show="{{!transaction.shared}}"><i class="fa fa-times" aria-hidden="true"></i></div> -->
-      </td>
+    <!--tr ng-repeat="transaction in transactionArray | orderBy:'-date'" ng-if="shouldShowTransaction(transaction)">
 
-      <!-- Paid by -->
-      <td class="text-center">
-        <div class="tag tian-tag" ng-show="{{transaction.user=='tian'}}"
-            ng-click="setUserFilter('tian')">Tian</div>
-        <div class="tag joe-tag" ng-show="{{transaction.user=='joe'}}"
-            ng-click="setUserFilter('joe')">Joe</div>
-      </td>
+      <div transaction-row data="transaction"></div>
 
-      <td>{{transaction.description}}</td>
-      <td><pre>{{padAmount(transaction.amount)}}</pre></td>
-
-      <!-- Category -->
-      <td><span class="tag category-tag" ng-repeat="category in transaction.categories | orderBy: 'category'">{{category}}</span></td>
       <td>
         <button class="ui basic button delete-button" ng-click="deleteConfirmation(transaction.$id)">
           <i class="fa fa-times" aria-hidden="true"></i>
         </button>
       </td>
-    </tr>
+    </tr-->
   </table>
 </div>
