--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,13 @@
     <script>
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
-      console.log("alkjsdf");
       var config = {
       apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
       authDomain: "budgeting-41eaa.firebaseapp.com",
       databaseURL: "https://budgeting-41eaa.firebaseio.com",
       storageBucket: "budgeting-41eaa.appspot.com",
       };
-      console.log("alkjsdf 2");
       firebase.initializeApp(config);
-      console.log("alkjsdf 3");
     </script>
 
     <!-- Javascript -->
@@ -50,6 +47,7 @@
     <!-- Modules -->
     <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
     <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
+    <script src="javascripts/transactionTable/transactionHeaders.html" type="text/html"></script>
     <script src="javascripts/navigation/navDirective.js" type="text/javascript"></script>
     <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
     <script src="javascripts/piggyBar/piggyDirective.js" type="text/javascript"></script>
@@ -58,6 +56,8 @@
     <script src="javascripts/settings/settingsTemplate.html" type="text/html" ></script>
     <script src="javascripts/summary/summaryDirective.js" type="text/javascript"></script>
     <script src="javascripts/summary/summaryTemplate.html" type="text/html" ></script>
+    <script src="javascripts/upload/uploadDirective.js" type="text/javascript"></script>
+    <script src="javascripts/upload/uploadTemplate.html" type="text/html" ></script>
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
@@ -71,6 +71,7 @@
     <link rel="stylesheet/less" type="text/css" href="stylesheets/transactionTable.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/settings.less" />
     <link rel="stylesheet/less" type="text/css" href="stylesheets/summary.less" />
+    <link rel="stylesheet/less" type="text/css" href="stylesheets/upload.less" />
     <script src="javascripts/external/less.js" type="text/javascript"></script>
   </head>
 
